Update to Java 10, use incubator http client